Replace orchid with thaliproject/Tor_Onion_Proxy_Library. Replace OkHttp with custom Http handling because of socket

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
+<?xml version='1.0' encoding='UTF-8'?>
 <resources>
-    <string name="app_name">Download Over TOR</string>
+  <string name="app_name">Android Download Over TOR</string>
 </resources>
